package entity.animated;

import entity.Entity;
import javafx.scene.image.Image;

public class AnimatedEntity extends Entity {
  public void update() {
    //
  }

  protected AnimatedEntity(int x, int y, Image image) {
    super(x, y, image);
  }
}
