package entity.animated;

public class Bomb extends AnimatedEntity {
  public void explode() {
    
  }
}
